[project]
name = "microshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "fastapi>=0.121.3",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "ruff>=0.14.6",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
